# learning-system

./: .env.example  .gitignore  BATCH_GRADING_TDD_TESTS.md  CLAUDE.md  CODE_QUALITY_REVIEW.md  Cargo.toml  DOCUMENTATION_UPDATE_SUMMARY.md  ENDPOINT_CLEANUP_SUMMARY.md  FRONTEND_REFACTORING_RECOMMENDATIONS.md  KNOWN_ISSUES.md  MULTIPLE_CHOICE_GRADING_FIX.md  PARALLEL_GRADING_PLAN.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE2_TDD_TEST_REPORT.md  QUIZ_EFFICIENCY_IMPROVEMENTS.md  README.md  REVIEW_LOADING_OPTIMIZATIONS.md  TDD_SUMMARY.md  UI_IMPROVEMENTS.md  UI_IMPROVEMENTS_PHASE_4.md  USAGE.md  card_header_demo.html  info_architecture_demo.html  learning_fsrs_system.md  learning_system.db  learning_system.db.backup  run.sh
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  db-tests.yml  security.yml
docs/: LOGGING.md
probability/: probability.md
prompts/: backlinks.md  linked-zettles.md
src/: api.rs  card_service.rs  config.rs  database.rs  efficiency_tests.rs  errors.rs  fsrs_scheduler.rs  lib.rs  llm_providers.rs  llm_service.rs  logging.rs  main.rs  models.rs  question_cache.rs
src/tests/: batch_grading_integration_test.rs  batch_grading_service_test.rs  (+4 more)
static/: app.js  index.html  styles.css  test-batch-grading.html  test-runner.html
tests/: api_tests.rs  config_tests.rs  error_handling_tests.rs  gemini_tests.rs  integration_tests.rs  llm_error_handling_tests.rs  llm_provider_strategy_test.rs  llm_provider_tests.rs  markdown_tests.rs  review_interface_tests.rs  single_fsrs_update_test.rs  ui_features_tests.rs
(+10 files in other folders)
